--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,23 @@
 application:
   version: @project.version@
 spring:
+  profiles:
+    active: dev
+#    active: prod
   datasource:
     url: jdbc:postgresql://188.227.18.141:5432/usersvk_db
-    username: vkauther
-    password: kjhblk79n
+    username: blank
+    password: blank
     driver-class-name: org.postgresql.Driver
   jpa:
-    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         temp:
           use_jdbc_metadata_defaults: false
     database-platform: org.hibernate.dialect.PostgreSQL9Dialect
-    hibernate:
-      ddl-auto: update
 vkontakte:
   clientId: 6854536
-  clientSecret: tydL45SfvnbK23xrgs8a
+  clientCode: tydL45SfvnbK23xrgs8a
   callbackUri: http://188.227.18.141:8080/callback
   scope: wall,offline,email
