--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,4 +2,10 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: validate
+#      ddl-auto: create
+      ddl-auto: none
+  datasource:
+    url: jdbc:postgresql://188.227.18.141:5432/usersvk_db_dev
+    username: blank
+    password: blank
+    driver-class-name: org.postgresql.Driver
